--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --laranja-claro: #FF862A;
-    --alto-contraste-fundo: #000000;
-    --alto-contraste-texto: #ffffff;
+    --laranja-claro: #154add;
+    --alto-contraste-fundo: #ce1313;
+    --alto-contraste-texto: #d413d4;
     --alto-contraste-link: #ffd700;
 }
 
@@ -30,13 +30,13 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/4965007.jpg');
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKNS8Tw0-MXhgLypUGZR_dIElPgYOQ__d0BA&s');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
     border-radius: 80px;
     width: 100%;
-    height: 606px;
+    height: 350px;
     padding: 40px;
     margin: 0 auto;
 }
@@ -79,8 +79,8 @@ section {
     padding-top: 5rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    background: url('img/flor.png') top right no-repeat,
-        url('img/flor-esquerda.png') bottom left no-repeat;
+    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRY_MGycjJOZbBYWq6V1hGqKT1HZnD3P4k7LQ&s') top right no-repeat,
+        url('https://64.media.tumblr.com/d139e5f8a18fc403b95fef005457c4c3/62091edce4847a79-d0/s1280x1920/ef124072c711b38e51cc885331917ffe767e9fad.png') bottom left no-repeat;
     background-size: 180px 180px;
     /* Ajuste o tamanho conforme necessário */
 }
@@ -113,7 +113,7 @@ h2 {
 }
 
 #contato {
-    background-image: url('img/4965007.jpg');
+    background-image: url('img/brasil.png');
     background-size: cover;
     padding: 4rem 0;
     /* Espaçamento interno para a seção de contato */
